Added a Selector for different Model Settings, Made the StoryEdtior scrollable (finally managed to), Adjusted Generation and other Control Buttons
